[package]
name = "uurlog-paymo"
version = "0.1.0"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
edition = "2018"

[dependencies]
reqwest     = { version = "0.11.10", features = ["json"] }
serde       = { version = "1.0.111", features = ["derive"] }
structopt   = "0.3.14"
tokio       = { version = "1.20.4", features = ["macros", "rt-multi-thread", "time"] }
uurlog      = { git = "https://github.com/de-vri-es/uurlog" }
urlencoding = "2.1.0"
log         = "0.4.8"
env_logger  = "0.9.0"
