[package]
name = "uurlog-paymo"
version = "0.1.0"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
edition = "2018"

[dependencies]
reqwest     = { version = "0.12.22", features = ["json"] }
serde       = { version = "1.0.219", features = ["derive"] }
structopt   = "0.3.26"
tokio       = { version = "1.47.0", features = ["macros", "rt-multi-thread", "time"] }
uurlog      = { git = "https://github.com/de-vri-es/uurlog" }
urlencoding = "2.1.3"
log         = "0.4.27"
env_logger  = "0.11.8"
